Fixing sidebar z-index issue.

--- a/style.css
+++ b/style.css
@@ -203,6 +203,7 @@ html {
     right: -40rem;
     background-color: #fff;
     transition: right .5s;
+    z-index: 100;
 }
 
 .change .sidebar {
